--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.3.1",
+    "mysql2": "^3.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
